--- a/dictionary.ipynb
+++ b/dictionary.ipynb
@@ -2,46 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mTraceback (most recent call last):\n",
-      "\u001b[1;31m  File \"c:\\Users\\SHRADDHA SINGH\\anaconda3\\lib\\runpy.py\", line 196, in _run_module_as_main\n",
-      "\u001b[1;31m    return _run_code(code, main_globals, None,\n",
-      "\u001b[1;31m  File \"c:\\Users\\SHRADDHA SINGH\\anaconda3\\lib\\runpy.py\", line 86, in _run_code\n",
-      "\u001b[1;31m    exec(code, run_globals)\n",
-      "\u001b[1;31m  File \"c:\\Users\\SHRADDHA SINGH\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py\", line 15, in <module>\n",
-      "\u001b[1;31m    from ipykernel import kernelapp as app\n",
-      "\u001b[1;31m  File \"c:\\Users\\SHRADDHA SINGH\\anaconda3\\lib\\site-packages\\ipykernel\\kernelapp.py\", line 51, in <module>\n",
-      "\u001b[1;31m    from .ipkernel import IPythonKernel\n",
-      "\u001b[1;31m  File \"c:\\Users\\SHRADDHA SINGH\\anaconda3\\lib\\site-packages\\ipykernel\\ipkernel.py\", line 22, in <module>\n",
-      "\u001b[1;31m    from .debugger import Debugger, _is_debugpy_available\n",
-      "\u001b[1;31m  File \"c:\\Users\\SHRADDHA SINGH\\anaconda3\\lib\\site-packages\\ipykernel\\debugger.py\", line 22, in <module>\n",
-      "\u001b[1;31m    from debugpy.server import api  # noqa\n",
-      "\u001b[1;31m  File \"c:\\Users\\SHRADDHA SINGH\\anaconda3\\lib\\site-packages\\debugpy\\server\\__init__.py\", line 9, in <module>\n",
-      "\u001b[1;31m    import debugpy._vendored.force_pydevd  # noqa\n",
-      "\u001b[1;31m  File \"c:\\Users\\SHRADDHA SINGH\\anaconda3\\lib\\site-packages\\debugpy\\_vendored\\force_pydevd.py\", line 37, in <module>\n",
-      "\u001b[1;31m    pydevd_constants = import_module('_pydevd_bundle.pydevd_constants')\n",
-      "\u001b[1;31m  File \"c:\\Users\\SHRADDHA SINGH\\anaconda3\\lib\\importlib\\__init__.py\", line 126, in import_module\n",
-      "\u001b[1;31m    return _bootstrap._gcd_import(name[level:], package, level)\n",
-      "\u001b[1;31m  File \"c:\\Users\\SHRADDHA SINGH\\anaconda3\\lib\\site-packages\\debugpy\\_vendored\\pydevd\\_pydevd_bundle\\pydevd_constants.py\", line 365, in <module>\n",
-      "\u001b[1;31m    from _pydev_imps._pydev_saved_modules import thread, threading\n",
-      "\u001b[1;31m  File \"c:\\Users\\SHRADDHA SINGH\\anaconda3\\lib\\site-packages\\debugpy\\_vendored\\pydevd\\_pydev_imps\\_pydev_saved_modules.py\", line 93, in <module>\n",
-      "\u001b[1;31m    import code as _code;    verify_shadowed.check(_code, ['compile_command', 'InteractiveInterpreter'])\n",
-      "\u001b[1;31m  File \"c:\\Users\\SHRADDHA SINGH\\anaconda3\\lib\\site-packages\\debugpy\\_vendored\\pydevd\\_pydev_imps\\_pydev_saved_modules.py\", line 77, in check\n",
-      "\u001b[1;31m    raise DebuggerInitializationError(msg)\n",
-      "\u001b[1;31m_pydev_imps._pydev_saved_modules.DebuggerInitializationError: It was not possible to initialize the debugger due to a module name conflict.\n",
-      "\u001b[1;31m\n",
-      "\u001b[1;31mi.e.: the module \"code\" could not be imported because it is shadowed by:\n",
-      "\u001b[1;31mc:\\Users\\SHRADDHA SINGH\\OneDrive\\Desktop\\Base\\code.py\n",
-      "\u001b[1;31mPlease rename this file/folder so that the original module from the standard library can be imported. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'neha': {'english': 90, 'maths': 30, 'science': 50}, 'rahul': {'english': 90, 'maths': 30, 'science': 50}}\n"
      ]
     }
    ],
@@ -65,17 +33,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mIndentationError: unexpected indent. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'neha': {'english': 90, 'maths': 30, 'science': 50},\n",
+      " 'rahul': {'english': 90, 'maths': 30, 'science': 50}}\n"
      ]
     }
    ],
@@ -88,36 +54,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mIndentationError: unexpected indent. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mIndentationError: unexpected indent. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "grocery = {\n",
@@ -129,17 +73,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mIndentationError: unexpected indent. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'fruit': ['apple', 'banana', 'mango'],\n",
+      " 'veg': ['carrot', 'onion', 'patato'],\n",
+      " 'spivce': ['cumin', 'coriander', 'turmeric']}\n"
      ]
     }
    ],
@@ -150,17 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mIndentationError: unexpected indent. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'fruit': ['apple', 'banana', 'mango', 'lichi'],\n",
+      " 'veg': ['carrot', 'onion', 'patato'],\n",
+      " 'spivce': ['cumin', 'coriander', 'turmeric']}\n"
      ]
     }
    ],
@@ -171,17 +113,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mIndentationError: unexpected indent. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'neha': {'english': 90, 'maths': 30, 'science': 50, 'evs': 99},\n",
+      " 'rahul': {'english': 90, 'maths': 30, 'science': 50}}\n"
      ]
     }
    ],
@@ -192,18 +132,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mIndentationError: unexpected indent. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
+     "data": {
+      "text/plain": [
+       "{'english': 90, 'maths': 30, 'science': 50, 'evs': 99}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -212,37 +152,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mIndentationError: unexpected indent. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "grocery['fruit'].remove('mango')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
+     "ename": "NameError",
+     "evalue": "name 'fruit' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mIndentationError: unexpected indent. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m fruit\u001b[39m.\u001b[39mkeys()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'fruit' is not defined"
      ]
     }
    ],
@@ -563,7 +493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
