--- a/numpy_basic.ipynb
+++ b/numpy_basic.ipynb
@@ -2,37 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mIndentationError: unexpected indent. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mIndentationError: unexpected indent. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n",
+      "(3,)\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "(2, 3)\n"
      ]
     }
    ],
@@ -50,17 +40,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mIndentationError: unexpected indent. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.  1.2 1.4 1.6 1.8 2.  2.2 2.4 2.6 2.8 3.  3.2 3.4 3.6 3.8 4.  4.2 4.4\n",
+      " 4.6 4.8 5.  5.2 5.4 5.6 5.8 6.  6.2 6.4 6.6 6.8 7.  7.2 7.4 7.6 7.8 8.\n",
+      " 8.2 8.4 8.6 8.8 9.  9.2 9.4 9.6 9.8]\n",
+      "(45,)\n",
+      "[ 1.  2.  3.  4.  5.  6.  7.  8.  9. 10.]\n"
      ]
     }
    ],
@@ -74,17 +65,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mIndentationError: unexpected indent. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.  1.2 1.4 1.6 1.8]\n",
+      "  [2.  2.2 2.4 2.6 2.8]\n",
+      "  [3.  3.2 3.4 3.6 3.8]]\n",
+      "\n",
+      " [[4.  4.2 4.4 4.6 4.8]\n",
+      "  [5.  5.2 5.4 5.6 5.8]\n",
+      "  [6.  6.2 6.4 6.6 6.8]]\n",
+      "\n",
+      " [[7.  7.2 7.4 7.6 7.8]\n",
+      "  [8.  8.2 8.4 8.6 8.8]\n",
+      "  [9.  9.2 9.4 9.6 9.8]]]\n"
      ]
     }
    ],
@@ -94,18 +92,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mIndentationError: unexpected indent. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
+     "data": {
+      "text/plain": [
+       "array([[ 91, 655, 322],\n",
+       "       [430, 818, 563],\n",
+       "       [724, 860, 404]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -114,20 +114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mIndentationError: unexpected indent. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#maths in numpy\n",
     "\n",
@@ -144,17 +133,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mIndentationError: unexpected indent. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 3  6  9]\n",
+      " [13 12 11]]\n",
+      "[[ 1  0 -1]\n",
+      " [-3  0  3]]\n",
+      "[[2.    1.    0.8  ]\n",
+      " [0.625 1.    1.75 ]]\n",
+      "[[ 2  9 20]\n",
+      " [40 36 28]]\n",
+      "[[     2     27   1024]\n",
+      " [390625  46656   2401]]\n",
+      "[[0 0 4]\n",
+      " [5 0 3]]\n"
      ]
     }
    ],
@@ -169,17 +166,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mIndentationError: unexpected indent. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 31  50]\n",
+      " [ 58 104]]\n",
+      "[[ 31  50]\n",
+      " [ 58 104]]\n",
+      "[[ 31  50]\n",
+      " [ 58 104]]\n"
      ]
     }
    ],
@@ -192,17 +191,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mIndentationError: unexpected indent. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n",
+      "[ 7  9 11]\n",
+      "[ 9 18]\n",
+      "4.5\n",
+      "1.707825127659933\n",
+      "2\n",
+      "7\n",
+      "5\n",
+      "0\n"
      ]
     }
    ],
@@ -220,17 +224,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mIndentationError: unexpected indent. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.90929743  0.14112001 -0.7568025 ]\n",
+      " [-0.95892427 -0.2794155   0.6569866 ]]\n",
+      "[[-0.41614684 -0.9899925  -0.65364362]\n",
+      " [ 0.28366219  0.96017029  0.75390225]]\n",
+      "[[-2.18503986 -0.14254654  1.15782128]\n",
+      " [-3.38051501 -0.29100619  0.87144798]]\n",
+      "[[nan nan nan]\n",
+      " [nan nan nan]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\SHRADDHA SINGH\\AppData\\Local\\Temp\\ipykernel_13080\\252134562.py:5: RuntimeWarning: invalid value encountered in arcsin\n",
+      "  print(np.arcsin(x))\n"
      ]
     }
    ],
@@ -244,17 +260,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mIndentationError: unexpected indent. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "[2 3 4]\n",
+      "[2 5]\n",
+      "[[2 3]\n",
+      " [5 6]]\n",
+      "[[2 3 4]\n",
+      " [5 6 7]]\n"
      ]
     }
    ],
@@ -271,18 +290,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mIndentationError: unexpected indent. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   }
  ],
@@ -293,8 +301,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.10"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
